[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/nurek_green.png" type="Texture" id=1]
[ext_resource path="res://elements/player/nurek.gd" type="Script" id=2]
[ext_resource path="res://assets/bubble.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.9095
height = 27.7678

[sub_resource type="Animation" id=2]
resource_name = "progress bar tint"
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/Panel/ProgressBar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133278, 0.242562, 0.338884, 0.46551 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.768627, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.776471, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.39
emission_shape = 1
emission_sphere_radius = 19.41
flag_disable_z = true
spread = 32.67
flatness = 0.16
gravity = Vector3( 0, -180, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_random = 0.38
scale = 0.03
scale_random = 0.03

[node name="RigidBody2D" type="RigidBody2D"]
collision_mask = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="nurek" type="Sprite" parent="."]
scale = Vector2( 0.186854, 0.186854 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.06351, 0.522574 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 34

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.06351, 0.522574 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/taking damage" = SubResource( 2 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 2.09185, -2.80658 )
emitting = false
amount = 16
one_shot = true
speed_scale = 1.29
explosiveness = 0.18
visibility_rect = Rect2( -300, 0, 400, 10 )
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Particles2D3" type="Particles2D" parent="."]
position = Vector2( 2.09185, -2.80658 )
emitting = false
amount = 16
one_shot = true
speed_scale = 1.29
explosiveness = 0.62
visibility_rect = Rect2( -300, 0, 400, 10 )
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
